# selafin_benchmark

./: README.md  pyproject.toml
selafin_benchmark/: Serafin.py  selafin.py  serafin_file.py  telemac_file.py  util.py  var_convention.py
tests/: test_perf.py
